# horus-public

./: .gitignore  Cargo.toml  README.md
src/: main.rs  storage.rs  store.rs
src/app/: color.rs  duplex.rs  login.rs  main.rs  mod.rs  panels.rs  simplex.rs  sonar.rs  visor.rs  zeppelin.rs
src/queries/: hdtools.rs  ip.rs  mod.rs  osiris.rs  splunk.rs
src/user/: login.rs  mod.rs  vpnlog.rs
