[package]
name = "horus"
version = "1.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
cookie_store = "0.19"
dirs = "5.0"
eframe = "0.22"
egui = { version = "0.22", features = ["default"] }
egui_extras = { version = "0.22", features = ["datepicker"] }
env_logger = "0.10"
# image = { version = "0.24", features = ["webp"] }
log = "0.4"
rayon = "1.7"
regex = "1.9"
rusqlite = "0.29"
serde = { version = "1.0", features = ["derive"] }
ureq = { version = "2.7", features = ["json", "tls", "cookies"] }
url = "2.4"
